@@ -1,166 +1,122 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.*;
-import com.sprint.mission.discodeit.entity.*;
+import com.sprint.mission.discodeit.dto.data.ChannelDto;
+import com.sprint.mission.discodeit.dto.request.PrivateChannelCreateRequest;
+import com.sprint.mission.discodeit.dto.request.PublicChannelCreateRequest;
+import com.sprint.mission.discodeit.dto.request.PublicChannelUpdateRequest;
+import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
+import com.sprint.mission.discodeit.entity.ReadStatus;
+import com.sprint.mission.discodeit.exception.channel.ChannelNotFoundException;
+import com.sprint.mission.discodeit.exception.channel.PrivateChannelUpdateException;
 import com.sprint.mission.discodeit.mapper.ChannelMapper;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
+import java.util.List;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import lombok.extern.slf4j.Slf4j;
 
-import java.util.*;
-import java.util.stream.Collectors;
-
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class BasicChannelService implements ChannelService {
 
-  private final UserRepository userRepository;
   private final ChannelRepository channelRepository;
+  //
   private final ReadStatusRepository readStatusRepository;
+  private final MessageRepository messageRepository;
+  private final UserRepository userRepository;
   private final ChannelMapper channelMapper;
 
-  @Override
+  @PreAuthorize("hasRole('CHANNEL_MANAGER')")
   @Transactional
-  public ChannelDto createPublicChannel(PublicChannelCreateRequest request) {
-    if (channelRepository.existsByName(request.getName())) {
-      throw new IllegalArgumentException("이미 존재하는 채널 이름입니다: " + request.getName());
-    }
+  @Override
+  public ChannelDto create(PublicChannelCreateRequest request) {
+    log.debug("채널 생성 시작: {}", request);
+    String name = request.name();
+    String description = request.description();
+    Channel channel = new Channel(ChannelType.PUBLIC, name, description);
 
-    Channel channel = new Channel(request.getName(), ChannelType.PUBLIC, request.getDescription());
     channelRepository.save(channel);
+    log.info("채널 생성 완료: id={}, name={}", channel.getId(), channel.getName());
     return channelMapper.toDto(channel);
   }
 
-  @Override
   @Transactional
-  public ChannelDto createPrivateChannel(PrivateChannelCreateRequest request) {
-    String defaultName = "Private Channel " + UUID.randomUUID().toString().substring(0, 8);
-    Channel channel = new Channel(defaultName, ChannelType.PRIVATE, "Private message channel");
+  @Override
+  public ChannelDto create(PrivateChannelCreateRequest request) {
+    log.debug("채널 생성 시작: {}", request);
+    Channel channel = new Channel(ChannelType.PRIVATE, null, null);
     channelRepository.save(channel);
 
-    Set<UUID> participantIds = new HashSet<>();
-    if (request.getParticipantIds() != null) {
-      participantIds.addAll(request.getParticipantIds());
-    }
+    List<ReadStatus> readStatuses = userRepository.findAllById(request.participantIds()).stream()
+        .map(user -> new ReadStatus(user, channel, channel.getCreatedAt()))
+        .toList();
+    readStatusRepository.saveAll(readStatuses);
 
-    if (request.getCreatorId() != null) {
-      participantIds.add(request.getCreatorId());
-    }
-
-    for (UUID userId : participantIds) {
-      User user = userRepository.findById(userId)
-          .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다: " + userId));
-
-      ReadStatus readStatus = new ReadStatus(user, channel);
-      readStatusRepository.save(readStatus);
-      channel.addReadStatus(readStatus);
-      user.addReadStatus(readStatus);
-    }
+    log.info("채널 생성 완료: id={}, name={}", channel.getId(), channel.getName());
     return channelMapper.toDto(channel);
   }
 
+  @Transactional(readOnly = true)
   @Override
-  public ChannelDto getChannel(UUID id) {
-    Channel channel = channelRepository.findById(id)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
-    return channelMapper.toDto(channel);
-  }
-
-  @Override
-  public List<ChannelDto> getAllChannels() {
-    return channelRepository.findAll().stream()
+  public ChannelDto find(UUID channelId) {
+    return channelRepository.findById(channelId)
         .map(channelMapper::toDto)
-        .collect(Collectors.toList());
+        .orElseThrow(() -> ChannelNotFoundException.withId(channelId));
   }
 
+  @Transactional(readOnly = true)
   @Override
   public List<ChannelDto> findAllByUserId(UUID userId) {
-    if (!userRepository.existsById(userId)) {
-      throw new IllegalArgumentException("존재하지 않는 유저입니다.");
-    }
+    List<UUID> mySubscribedChannelIds = readStatusRepository.findAllByUserId(userId).stream()
+        .map(ReadStatus::getChannel)
+        .map(Channel::getId)
+        .toList();
 
-    return channelRepository.findAll().stream()
-        .filter(channel -> canUserAccessChannel(channel, userId))
+    return channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC, mySubscribedChannelIds)
+        .stream()
         .map(channelMapper::toDto)
-        .sorted(Comparator.comparing(ChannelDto::lastMessageAt,
-            Comparator.nullsLast(Comparator.reverseOrder())))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  private boolean canUserAccessChannel(Channel channel, UUID userId) {
-    if (ChannelType.PUBLIC.equals(channel.getType())) {
-      return true;
-    }
-    return readStatusRepository.findByUser_IdAndChannel_Id(userId, channel.getId()).isPresent();
-  }
-
-  @Override
+  @PreAuthorize("hasRole('CHANNEL_MANAGER')")
   @Transactional
-  public ChannelDto updateChannel(UUID channelId, PublicChannelUpdateRequest request) {
+  @Override
+  public ChannelDto update(UUID channelId, PublicChannelUpdateRequest request) {
+    log.debug("채널 수정 시작: id={}, request={}", channelId, request);
+    String newName = request.newName();
+    String newDescription = request.newDescription();
     Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
-
-    if (ChannelType.PRIVATE.equals(channel.getType())) {
-      throw new IllegalStateException("PRIVATE 채널은 수정할 수 없습니다.");
+        .orElseThrow(() -> ChannelNotFoundException.withId(channelId));
+    if (channel.getType().equals(ChannelType.PRIVATE)) {
+      throw PrivateChannelUpdateException.forChannel(channelId);
     }
-
-    if (request.getNewName() != null && !request.getNewName().isBlank()) {
-        channel.updateName(request.getNewName());
-    }
-    if (request.getNewDescription() != null) {
-        channel.updateDescription(request.getNewDescription());
-    }
-
+    channel.update(newName, newDescription);
+    log.info("채널 수정 완료: id={}, name={}", channelId, channel.getName());
     return channelMapper.toDto(channel);
   }
 
-  @Override
+  @PreAuthorize("hasRole('CHANNEL_MANAGER')")
   @Transactional
-  public void deleteChannel(UUID id) {
-    Channel channel = channelRepository.findById(id)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
-
-    channelRepository.delete(channel);
-  }
-
   @Override
-  @Transactional
-  public ChannelDto enterChannel(UUID userId, UUID channelId) {
-    User user = userRepository.findById(userId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
-
-    if (ChannelType.PRIVATE.equals(channel.getType())) {
-      throw new IllegalStateException("PRIVATE 채널은 초대 없이 입장할 수 없습니다.");
+  public void delete(UUID channelId) {
+    log.debug("채널 삭제 시작: id={}", channelId);
+    if (!channelRepository.existsById(channelId)) {
+      throw ChannelNotFoundException.withId(channelId);
     }
 
-    if (readStatusRepository.findByUser_IdAndChannel_Id(userId, channelId).isPresent()) {
-      throw new IllegalArgumentException("이미 해당 채널에 참가 중입니다.");
-    }
+    messageRepository.deleteAllByChannelId(channelId);
+    readStatusRepository.deleteAllByChannelId(channelId);
 
-    ReadStatus readStatus = new ReadStatus(user, channel);
-    readStatusRepository.save(readStatus);
-    channel.addReadStatus(readStatus);
-    user.addReadStatus(readStatus);
-
-    return channelMapper.toDto(channel);
-  }
-
-  @Override
-  @Transactional
-  public void leaveChannel(UUID userId, UUID channelId) {
-    User user = userRepository.findById(userId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));
-    Channel channel = channelRepository.findById(channelId)
-        .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 채널입니다."));
-
-    readStatusRepository.findByUser_IdAndChannel_Id(userId, channelId)
-        .ifPresent(readStatusRepository::delete);
+    channelRepository.deleteById(channelId);
+    log.info("채널 삭제 완료: id={}", channelId);
   }
 }
